<resources>
    <string name="a11y_no_data">No data</string>
    <string name="a11y_no_permission">No permission to access data</string>
    <string name="a11y_template_range">%1$f of %2$f</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accept_shealth_user_agreement">Accept S Health User Agreement</string>
    <string name="accept_shealth_user_agreement_subtext">You must open the S Health app and accept the user agreement to share events.</string>
    <string name="accepted">Accepted</string>
    <string name="account_edit_info1">You must consent to share your personal data with Dexcom to view your account information</string>
    <string name="account_edit_info2">Provide consent at Settings > Data Consent</string>
    <string name="account_edit_name">Display Name</string>
    <string name="account_edit_no_changes">No Changes Saved</string>
    <string name="account_edit_unavailable">Account information unavailable</string>
    <string name="account_edit_username">Username</string>
    <string name="action_edit_user_events">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="activity_event_history_footer_message">Previous events can be seen in Dexcom Clarity.</string>
    <string name="alert_error_title">Error</string>
    <string name="alert_message_sensor_error_1">You will not receive alerts, alarms, or sensor glucose readings.</string>
    <string name="alert_message_sensor_error_3">Tap Dexcom Pro Removal Instructions below.</string>
    <string name="alert_no_sound">Alerts will not sound</string>
    <string name="alert_schedule_summary">Alert Schedule Summary</string>
    <string name="alert_scheduled_no_sound">Scheduled alerts will not sound</string>
    <string name="alert_scheduled_sound">Scheduled alerts will sound</string>
    <string name="alert_settings_text_every_30_mins">Every 30 minutes</string>
    <string name="alert_settings_text_never">Never</string>
    <string name="alert_sound">Alerts will sound</string>
    <string name="alert_summary_always_sound">Always Sound</string>
    <string name="alert_summary_days">Days</string>
    <string name="alert_summary_high_glucose">High</string>
    <string name="alert_summary_low_glucose">Low</string>
    <string name="alert_summary_name">Name</string>
    <string name="alert_summary_time">Time</string>
    <string name="alert_text_off">Off</string>
    <string name="alert_text_on">On</string>
    <string name="alert_total_silence">Alerts will not sound due to phone settings</string>
    <string name="alerts_mute_override_text">Always Sound</string>
    <string name="alerts_notification_channel_name">Alerts &amp; Alarms</string>
    <string name="android_12_description">Permission to access your phone’s Bluetooth no longer requires Location Permission. Available on Android 12.</string>
    <string name="android_support12_title">Android 12 Support</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_compatibility_button_text_continue_uppercase">CONTINUE TO APP</string>
    <string name="app_compatibility_button_text_more_info">More information</string>
    <string name="app_compatibility_button_text_update_now">UPDATE APP NOW</string>
    <string name="app_compatibility_text_exit_app">Exit Application</string>
    <string name="app_compatibility_text_invalid">This app is invalid, and all features are disabled at this time. Please contact Dexcom for more information.</string>
    <string name="app_compatibility_text_invalid_device">Attention: Dexcom has not tested this app on this Android version and / or mobile device. Please install the Dexcom CGM app on a compatible device. For more information, tap on the ‘More information’ link below.</string>
    <string name="app_compatibility_text_server_error">App is unable to contact the Dexcom server. Access to the app is denied until this communication issue is resolved. Please check device setting and return to the app to try contacting again.</string>
    <string name="app_compatibility_title_incompatible_device">Incompatible smart device</string>
    <string name="app_compatibility_title_notice">Notice</string>
    <string name="app_compatibility_title_update">Update Available</string>
    <string name="app_compatibility_title_warning">Warning</string>
    <string name="app_is_running">Dexcom CGM is running</string>
    <string name="app_name">Dexcom G6</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="baby_cry">Baby Cry</string>
    <string name="barcode_scan_overlay_content_description">Lineup barcode with overlay.</string>
    <string name="beep">Beep</string>
    <string name="blamo_dings">Blamo Dings</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bullet_point">•</string>
    <string name="button_text_add">Add</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_close">Close</string>
    <string name="button_text_confirm">Confirm</string>
    <string name="button_text_continue">Continue</string>
    <string name="button_text_default">Set to default</string>
    <string name="button_text_done">Done</string>
    <string name="button_text_ok">OK</string>
    <string name="button_text_retry">Retry</string>
    <string name="button_text_save">Save</string>
    <string name="buttons_rect_bottom_center">Bottom</string>
    <string name="buttons_rect_bottom_left">Bottom left</string>
    <string name="buttons_rect_bottom_right">Bottom right</string>
    <string name="buttons_rect_left_bottom">Bottom, left side</string>
    <string name="buttons_rect_left_center">Center left</string>
    <string name="buttons_rect_left_top">Top, left side</string>
    <string name="buttons_rect_right_bottom">Bottom, right side</string>
    <string name="data_consent">Data Consent</string>
    <string name="dex_alerts_for_more_than">For More Than</string>
    <string name="dex_alerts_help_urgent_low_glucose_alarm">The Urgent Low Alarm will alarm you when your glucose level falls below %1$s %2$s.</string>
    <string name="dex_alerts_notify_me_below">Notify Me Below</string>
    <string name="dex_alerts_repeat">Repeat</string>
    <string name="dex_alerts_text">Alerts</string>
    <string name="dex_common_transmitter">Transmitter</string>
    <string name="dex_common_triple_dashes">---</string>
    <string name="dex_general_app_authorization">App Authorizations</string>
    <string name="dex_general_help">Help</string>
    <string name="dex_menu_sensor_expires">Sensor Expires</string>
    <string name="dex_meter_entry_title">Calibrate</string>
    <string name="dex_settings_CGM">CGM</string>
    <string name="dex_settings_account">Account</string>
    <string name="dex_settings_contact">Contact</string>
    <string name="dex_settings_graph_height">Graph Height</string>
    <string name="dex_settings_persistent_notifications_title">Quick Glance</string>
    <string name="dex_settings_stop_sensor_text">Refer to Help for sensor removal instructions.</string>
    <string name="dex_settings_support">Support</string>
    <string name="dex_share_hours">%1$d hours</string>
    <string name="health_connect_title">Health Connect</string>
    <string name="help_menu_copyright_date">Copyright © 2015 – 2023 Dexcom, Inc.</string>
    <string name="help_menu_copyright_text">Copyright</string>
    <string name="help_menu_text_3">Insertion Time</string>
    <string name="help_menu_text_38">Setup Wizard</string>
    <string name="help_menu_text_39">Safety Statements</string>
    <string name="help_menu_text_4">Last Calibration</string>
    <string name="help_menu_text_41">How To</string>
    <string name="help_menu_text_42">Frequently Asked Questions</string>
    <string name="help_menu_text_44">About</string>
    <string name="help_menu_text_66">Software Number</string>
    <string name="help_menu_text_67">Software Revision</string>
    <string name="help_menu_text_7">UDI</string>
    <string name="help_menu_text_70">Supported Systems</string>
    <string name="main_screen_text_29">Stop Sensor</string>
    <string name="menu_share">Share</string>
    <string name="product_instructions_text">Product Instructions</string>
    <string name="setup_wizard_privacy_policy">Privacy Policy</string>
    <string name="setup_wizard_terms_of_use">Terms Of Use</string>
    <string name="share_mgdl">%1$s %2$s</string>
    <string name="share_screen_text_35">Allow Trend Graph View</string>
    <string name="share_screen_text_39">Notify Below</string>
    <string name="share_screen_text_45">Notify Above</string>
    <string name="share_screen_text_46">No More Data</string>
    <string name="sound_alert_text">Sound</string>
    <string name="treatment_skip_video_button">Skip video</string>
    <string name="treatment_talk_healthcare">Talk to your healthcare professional about your treatment plan.</string>
    <string name="treatment_title">CGM-Based Treatment Decisions</string>
    <string name="treatment_use">You can use your G6 to make treatment decisions, like dosing for highs and eating for lows</string>
    <string name="treatment_use_meter">But use your meter if:</string>
    <string name="treatment_use_meter_bullet1">"• G6 doesn't show a number AND arrow"</string>
    <string name="treatment_use_meter_bullet2">"• Symptoms don't match number"</string>
    <string name="treatment_watch_video">Watch video to learn more.</string>
    <string name="treatment_watch_video_button">Watch video</string>
    <string name="udi">00386270000811</string>
    <string name="urgent_low_alarm_message_text">The Urgent Low Alarm notification level and repeat setting cannot be changed or turned off. Only the sound setting can be changed.</string>
    <string name="urgent_low_alarm_text">Urgent Low</string>
    <string name="user_guide_text">User Guide</string>
    <string name="user_high_alert_text">High</string>
    <string name="user_low_alert_text">Low</string>
    <string name="whats_new_title">"What's New"</string>
</resources>