<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="?android:listDivider" android:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/dex_toolbar" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/help_about_software_number" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_0.0" app:listEndText="@string/dex_common_triple_dashes" app:listTitle="@string/help_menu_text_66" app:titleAppiumID="id_title_0.0" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/help_about_software_revision" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_0.1" app:listEndText="@string/dex_common_triple_dashes" app:listTitle="@string/help_menu_text_67" app:titleAppiumID="id_title_0.1" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/help_about_udi" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_0.2" app:listEndText="@string/udi" app:listTitle="@string/help_menu_text_7" app:titleAppiumID="id_title_0.2" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/help_about_copyright" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_0.3" app:listEndText="@string/help_menu_copyright_date" app:listTitle="@string/help_menu_copyright_text" app:titleAppiumID="id_title_0.3" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/help_about_terms_of_use" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickTermsOfUse" app:listEndArrow="true" app:listTitle="@string/setup_wizard_terms_of_use" app:titleAppiumID="id_title_0.4" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/help_about_privacy_policy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickPrivacyPolicy" app:listEndArrow="true" app:listTitle="@string/setup_wizard_privacy_policy" app:titleAppiumID="id_title_0.5" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/help_about_supported_systems" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickSupportedSystems" app:listEndArrow="true" app:listTitle="@string/help_menu_text_70" app:titleAppiumID="id_title_0.6" />
</LinearLayout>