<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/parentLayout" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_trend_graph_cell" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_trend_graph_value" app:listEndText="@string/alert_text_on" app:listTitle="@string/share_screen_text_35" app:titleAppiumID="id_trend_graph_title" />
    <Space android:id="@id/review_allow_trend_graph_view_border" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_0.0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_0.0" app:listEndText="@string/alert_text_on" app:listTitle="@string/urgent_low_alarm_text" app:titleAppiumID="id_title_0.0" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_0.1" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_0.1" app:listEndText="@string/share_mgdl" app:listTitle="@string/share_screen_text_39" app:titleAppiumID="id_title_0.1" />
    <Space android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_1.0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_1.0" app:listEndText="@string/alert_text_off" app:listTitle="@string/user_low_alert_text" app:titleAppiumID="id_title_1.0" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_1.1" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_1.1" app:listEndText="@string/share_mgdl" app:listTitle="@string/share_screen_text_39" app:titleAppiumID="id_title_1.1" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_1.2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_1.2" app:listEndText="@string/dex_share_hours" app:listTitle="@string/dex_alerts_for_more_than" app:titleAppiumID="id_title_1.2" />
    <Space android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_2.0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_2.0" app:listEndText="@string/alert_text_off" app:listTitle="@string/user_high_alert_text" app:titleAppiumID="id_title_2.0" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_2.1" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_2.1" app:listEndText="@string/share_mgdl" app:listTitle="@string/share_screen_text_45" app:titleAppiumID="id_title_2.1" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_2.2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_2.2" app:listEndText="@string/dex_share_hours" app:listTitle="@string/dex_alerts_for_more_than" app:titleAppiumID="id_title_2.2" />
    <Space android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_3.0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_3.0" app:listEndText="@string/alert_text_off" app:listTitle="@string/share_screen_text_46" app:titleAppiumID="id_title_3.0" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_cell_3.1" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_value_3.1" app:listEndText="@string/dex_share_hours" app:listTitle="@string/dex_alerts_for_more_than" app:titleAppiumID="id_title_3.1" />
</LinearLayout>