<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Toolbar android:id="@id/help_toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:title="@string/treatment_title" android:titleTextColor="@android:color/black" style="@style/DexToolbar" />
    <RelativeLayout android:orientation="vertical" android:id="@id/content" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="34.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="34.0dip">
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:layout_above="@id/dualButtonLayout" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/id_treatment_use" android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/treatment_use" style="?dexH2" />
                <TextView android:id="@id/id_treatment_use_meter" android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/treatment_use_meter" style="?dexH2" />
                <TextView android:id="@id/id_treatment_use_meter_bullet1" android:paddingTop="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/treatment_use_meter_bullet1" style="?dexH2" />
                <TextView android:id="@id/id_treatment_use_meter_bullet2" android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/treatment_use_meter_bullet2" style="?dexH2" />
                <TextView android:id="@id/id_treatment_talk_healthcare" android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/treatment_talk_healthcare" style="?dexH2" />
                <TextView android:id="@id/id_treatment_watch_video" android:paddingTop="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/treatment_watch_video" style="?dexH2" />
            </LinearLayout>
        </ScrollView>
        <com.dexcom.cgm.activities.controls.DualButton android:id="@id/dualButtonLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" app:negativeAppiumID="id_skip_video_button" app:onClickNegative="onClickSkipVideo" app:onClickPositive="onClickWatchVideo" app:positiveAppiumID="id_watch_video_button" app:textNegative="@string/treatment_skip_video_button" app:textPositive="@string/treatment_watch_video_button" />
    </RelativeLayout>
</LinearLayout>