<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/dex_toolbar" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_notify_me_below_cell" android:layout_width="fill_parent" android:layout_height="wrap_content" app:endTextAppiumID="id_notify_me_below_value" app:listEndText="@string/share_mgdl" app:listTitle="@string/dex_alerts_notify_me_below" app:titleAppiumID="id_notify_me_below_title" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_repeat_cell" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" app:endTextAppiumID="id_repeat_value" app:listEndText="@string/alert_settings_text_every_30_mins" app:listTitle="@string/dex_alerts_repeat" app:titleAppiumID="id_repeat_title" />
    <TextView android:textSize="@dimen/helpAndFootertextFontSize" android:id="@id/id_urgent_low_alarm_the_text0" android:background="@color/dex_transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/urgent_low_alarm_message_text" android:layout_marginStart="@dimen/side_margin_size" android:layout_marginEnd="@dimen/side_margin_size" style="?dexH3" />
    <Space android:layout_width="fill_parent" android:layout_height="32.0dip" />
    <com.dexcom.cgm.activities.DexListNavView android:id="@id/id_sound_cell" android:layout_width="fill_parent" android:layout_height="wrap_content" android:onClick="onClickSoundSettings" app:endTextAppiumID="id_sound_value" app:listEndArrow="true" app:listEndText="Urgent Low" app:listTitle="@string/sound_alert_text" app:titleAppiumID="id_sound_title" />
    <TextView android:textSize="@dimen/helpAndFootertextFontSize" android:id="@id/id_urgent_low_alarm_the_text1" android:background="@color/dex_transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/dex_alerts_help_urgent_low_glucose_alarm" android:layout_marginStart="@dimen/side_margin_size" android:layout_marginEnd="@dimen/side_margin_size" style="?dexH3" />
</LinearLayout>